# _

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  run.sh  train.py
config/: llama3.toml
scripts/: mock.py  train.py  train_gen_ray.py  train_mt_pred.py  train_ray.py
src/ft/: custom_datasets.py  data.py  dataset_config.py  inference.py  job_config.py  logging.py  mesh_handler.py  model_handler.py  models.py  parallelism.py  states.py  tokenizer.py  trainer.py  training_monitor.py  utils.py
src/ft/ray/: base_actor.py  dist_info.py  mesh.py  mock_learner.py  mock_trainer.py  ray_utils.py  trainer.py  utils.py  vllm_engine.py  vllm_worker.py  vllm_worker_wrap.py
