[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=7"]
build-backend = "setuptools.build_meta"

[project]
name = "ft"
description = ""
requires-python = ">=3.12"
version = "0.0.0"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.optional-dependencies]
fa = [
    "flash-attn==2.7.3",
]
dev = [
    "pytest==7.0.1",
]
all = ["ft[fa,dev]"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["SIM108"]

[tool.uv]
no-build-isolation-package = ["flash-attn"]

